Contributions section addition

--- a/report/example.tex
+++ b/report/example.tex
@@ -345,6 +345,7 @@ The desired ordering is therefore S  = [...6,7,8,9]. To achieve this, currentSte
 When the user steps through, step 6 will trigger the 7th  element in the step list, the 8th will trigger the 9th and so on. Hence, the ordering is maintained and the application performs successfully.
 
 \subsection{Gediminas Leikus}
+\label{Gediminas:PE}
 \subsubsection{Separating animations into steps and making continuous animations}
 
 The group decided to use Java for our project, because we were all familiar with it and because it was the language our client suggested us to use. We had left the decision of choosing the animation tools to Andrew Gibson and Alexander Ferguson. For the reasons stated in this document (reference), they decided to choose the Timing Framework \cite{website:TimingFramework}.
@@ -445,6 +446,17 @@ TODO
 \subsection{Alexander Ferguson}
 \subsection{Andrew Gibson}
 \subsection{Gediminas Leikus}
+\label{Gediminas:Con}
+\begin{itemize}
+	\item Project planning
+	\item Steps in animations prototype
+	\item Continuous and step-by-step animation prototypes
+	\item AnimatedArray animated algorithms examples
+	\item Managing the repository, reviewing changes or updates
+	\item Refactoring
+	\item Debugging issues encountered by other members and looking for solutions
+	\item Sections \ref{Gediminas:PE} and \ref{Gediminas:Con} in this document
+\end{itemize}
 \subsection{Liam Bell}
 
 %==============================================================================
