Added my introduction with minor modifications (like replacing all the 'I's). We still need to look through it though.

--- a/report/example.bib
+++ b/report/example.bib
@@ -1,3 +1,11 @@
+@misc{website:Examples,
+	author = "sorting-algorithms.com",
+	title = "Sorting Algorithms Examples",
+	year = "2013",
+	howpublished = "\url{http://www.sorting-algorithms.com/}",
+	note = "[Online; accessed 4-March-2013]"
+}
+
 @misc{website:TimingFramework,
 	author = "Java.net",
 	title = "Timing Framework Official Website",
